--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,4 +1,6 @@
 {
-	"dependencies": {
-	}
+  "dependencies": {
+    "com.unity.ads": "exclude",
+    "com.unity.postprocessing": "2.0.13-preview"
+  }
 }
